--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
   "dependencies": {
     "@material-ui/core": "1.0.0",
     "@material-ui/icons": "1.0.0",
+    "lodash": "^4.17.10",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-scripts": "^1.1.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
+    "babel-plugin-lodash": "^3.3.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
